# swc-plugin-static-jsx

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  package.json  types.d.ts
.github/workflows/: e2e.yml  rust.yml
src/: lib.rs  transform.rs
tests/: fixture.rs
tests/e2e/: .swcrc  jest.config.js  main.test.js  package.json  pnpm-lock.yaml  tsconfig.json  utils.js
tests/e2e/scripts/: trace.cjs
tests/fixtures/all_dynamic/: input.js  output.js
tests/fixtures/all_static/: input.js  output.js
tests/fixtures/attribute/: output.js
tests/fixtures/attribute_namespace/: input.js  output.js
tests/fixtures/child_elements/: input.js  output.js
tests/fixtures/child_text/: input.js  output.js
tests/fixtures/fragment/: input.js  output.js
tests/fixtures/kitchen_sink/: input.js  output.js
tests/fixtures/mixed/: input.js  output.js
tests/fixtures/namespace/: output.js
tests/fixtures/return/: input.js  output.js
tests/fixtures/scoped_tag/: config.json  output.js
tests/fixtures/spread/: input.js  output.js
tests/fixtures/spread_empty/: output.js
tests/fixtures/spread_static/: input.js  output.js
tests/fixtures/static_after/: input.js  output.js
tests/fixtures/untagged/: output.js
tests/fixtures/void_element/: input.js  output.js
