[package]
name = "transform-static-jsx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[profile.min]
inherits = "release"
codegen-units = 1
opt-level = "s"
strip = "symbols"

[dependencies]
serde = "1"
swc_core = { version = "0.79.24", features = ["ecma_plugin_transform", "common", "ecma_visit", "ecma_ast", "ecma_utils"] }
swc_ecma_parser = "0.137.4"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
