[package]
name = "swc-plugin-static-jsx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true

[profile.min]
inherits = "release"
codegen-units = 1
opt-level = "s"
strip = "symbols"

[dependencies]
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
swc_core = { version = "0.79.24", features = ["ecma_plugin_transform", "common", "ecma_visit", "ecma_ast", "ecma_utils", "ecma_parser"] }

[dev-dependencies]
testing = "0.33.21"
swc_core = { version = "0.79.24", features = ["testing_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
